--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <nav>
         <div class="nav-brand">Thushan R.</div>
         <ul class="nav-links">
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="photography.html">Photography</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#projects" target="_blank">Projects</a></li>
+            <li><a href="blog.html" target="_blank">Blog</a></li>
+            <li><a href="photography.html" target="_blank">Photography</a></li>
+            <li><a href="#contact" target="_blank">Contact</a></li>
         </ul>
     </nav>
 
