--- a/photography.html
+++ b/photography.html
@@ -11,7 +11,7 @@
         <div class="nav-brand"><a href="index.html">Thushan R.</a></div>
         <ul class="nav-links">
             <li><a href="#projects" target="_blank">Projects</a></li>
-            <li><a href="#blog">Blog</a></li>
+            <li><a href="blog.html" target="_blank">Blog</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#gallery">Gallery</a></li>
         </ul>
