--- a/videos.html
+++ b/videos.html
@@ -17,9 +17,9 @@ Brightspace strips the grid-template-columns property, meaning this code will no
   <div style="background-color: whitesmoke; padding: 15px;">
     <h3 style="border-bottom: 1px solid; margin: 0 0 8px 0; font-size: 18px; font-weight: 600;">Leetcode: #344. Reverse String</h3>
     <div style="position: relative; width: 100%; padding-top: 56.25%;">
-      <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/DvKm5NjGXzM?rel=0" title="Pine Siskin" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/D7g5f2jTiJ0?si=njEGyJeU8W0sxS6q" title="Pine Siskin" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
-    <p style="margin: 12px 0 0 0;"><strong>Summary:</strong> Learn about the Pine Siskin, nature’s smallest and most social finch. You may see them arrive at your backyard bird feeders in droves in the early spring.</p>
+    <p style="margin: 12px 0 0 0;"><strong>Summary:</strong> Two Pointer approach used to solve the problem Reverse String on Leetcode.com by using a simple swapping technique.</p>
   </div>
 
   <!-- Video 2 -->
