--- a/videos.html
+++ b/videos.html
@@ -22,7 +22,7 @@ Brightspace strips the grid-template-columns property, meaning this code will no
     <p style="margin: 12px 0 0 0;"><strong>Summary:</strong> Two Pointer approach used to solve the problem Reverse String on Leetcode.com by using a simple swapping technique.</p>
   </div>
 
-  <!-- Video 2 -->
+  <!-- Video 2
   <div style="background-color: whitesmoke; padding: 15px;">
     <h3 style="border-bottom: 1px solid; margin: 0 0 8px 0; font-size: 18px; font-weight: 600;">Leetcode: #344. Reverse String</h3>
     <div style="position: relative; width: 100%; padding-top: 56.25%;">
@@ -32,22 +32,22 @@ Brightspace strips the grid-template-columns property, meaning this code will no
   </div>
 
   <!-- Video 3 -->
-  <div style="background-color: whitesmoke; padding: 15px;">
+  <!-- <div style="background-color: whitesmoke; padding: 15px;">
     <h3 style="border-bottom: 1px solid; margin: 0 0 8px 0; font-size: 18px; font-weight: 600;">Leetcode: #344. Reverse String</h3>
     <div style="position: relative; width: 100%; padding-top: 56.25%;">
       <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/PKCyg5zE82A?rel=0" title="Pacific Treefrog Calling" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     <p style="margin: 12px 0 0 0;"><strong>Summary:</strong> The Pacific Treefrog id one of the few frog species that actually says “ribbit, ribbit!”</p>
-  </div>
+  </div> -->
 
   <!-- Video 4 -->
-  <div style="background-color: whitesmoke; padding: 15px;;">
+  <!-- <div style="background-color: whitesmoke; padding: 15px;;">
     <h3 style="border-bottom: 1px solid; margin: 0 0 8px 0; font-size: 18px; font-weight: 600;">Leetcode: #344. Reverse String</h3>
     <div style="position: relative; width: 100%; padding-top: 56.25%;">
       <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/Qve3jLhMYRI?rel=0" title="River Otters" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     <p style="margin: 12px 0 0 0;"><strong>Summary:</strong> Playful and slippery, these otters know how to have fun. They also have sharp teeth.</p>
-  </div>
+  </div> -->
 
 </div>
 <!-- END OF GRID -->
