--- a/videos.html
+++ b/videos.html
@@ -1,6 +1,6 @@
-<header><div><h1>Responsive Video Grid With iframes</h1><p><a href="https://codepen.io/collection/DRVxQE" target="_blank">More examples</a></p></div></header>
+<header><div><h1>Algorithms Videos</h1><p><a href="https://codepen.io/collection/DRVxQE" target="_blank">More examples</a></p></div></header>
 <div class="aks-note-box">
-  <p>Resize your window to see the videos resize automatically.</p>
+  <p>dummy text for now</p>
 </div>
 <!--
 NOTE FOR BRIGHTSPACE USERS: 
@@ -22,13 +22,13 @@ Brightspace strips the grid-template-columns property, meaning this code will no
     <p style="margin: 12px 0 0 0;"><strong>Summary:</strong> Two Pointer approach used to solve the problem Reverse String on Leetcode.com by using a simple swapping technique.</p>
   </div>
 
-  <!-- Video 2
+  <!-- Video 2 -->
   <div style="background-color: whitesmoke; padding: 15px;">
-    <h3 style="border-bottom: 1px solid; margin: 0 0 8px 0; font-size: 18px; font-weight: 600;">Leetcode: #344. Reverse String</h3>
+    <h3 style="border-bottom: 1px solid; margin: 0 0 8px 0; font-size: 18px; font-weight: 600;">Leetcode: #283. Move Zeroes</h3>
     <div style="position: relative; width: 100%; padding-top: 56.25%;">
-      <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/HCcgnTM8CsQ?rel=0" title="Salmon Lifecycle with Ranger Tessa" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/Y4TF3YzG_6k?si=r5JaCPI_hld7fhhP" title="Salmon Lifecycle with Ranger Tessa" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
-    <p style="margin: 12px 0 0 0;"><strong>Summary:</strong> From freshwater to the sea and back again. The king salmon is nature's biggest, but smallest, traveler.</p>
+    <p style="margin: 12px 0 0 0;"><strong>Summary:</strong> Two Pointer approach used to solve the problem Move Zeroes on Leetcode.com by using a smart loop technique.</p>
   </div>
 
   <!-- Video 3 -->
