--- a/photography.html
+++ b/photography.html
@@ -10,10 +10,11 @@
     <nav>
         <div class="nav-brand"><a href="index.html">Thushan R.</a></div>
         <ul class="nav-links">
-            <li><a href="#projects" target="_blank">Projects</a></li>
-            <li><a href="blog.html" target="_blank">Blog</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="javascript:void(0);" style="cursor: default; color: gray;" target="_blank">Projects</a></li>
+            <li><a href="javascript:void(0);" style="cursor: default; color: gray;">Blog</a></li>
+            <li><a href="photography.html" target="_blank">Photography</a></li>
+            <li><a href="videos.html" target="_blank">Videos</a></li>
+            <li><a href="javascript:void(0);" style="cursor: default; color: gray;" target="_blank">Contact</a></li>
         </ul>
     </nav>
 
