--- a/videos.html
+++ b/videos.html
@@ -1,7 +1,22 @@
-<header><div><h1>Algorithms Videos</h1><p><a href="https://codepen.io/collection/DRVxQE" target="_blank">More examples</a></p></div></header>
+<header><div><h1>Algorithms Videos</h1><p><a href="https://codepen.io/collection/DRVxQE" target="_blank"></a></p></div></header>
+
+
 <div class="aks-note-box">
-  <p>dummy text for now</p>
+  <form action="/action_page.php">
+    <label for="cars">Filter Problem Type:</label>
+    <select name="cars" id="cars">
+      <option value="volvo">Two Pointer</option>
+      <option value="saab">Array</option>
+      <option value="opel">String</option>
+      <option value="audi">Graphs</option>
+    </select>
+    <br><br>
+    <!-- <input type="submit" value="Submit"> -->
+  </form>
 </div>
+
+
+
 <!--
 NOTE FOR BRIGHTSPACE USERS: 
 Brightspace strips the grid-template-columns property, meaning this code will not give you the desired results in Brightspace.
@@ -32,13 +47,13 @@ Brightspace strips the grid-template-columns property, meaning this code will no
   </div>
 
   <!-- Video 3 -->
-  <!-- <div style="background-color: whitesmoke; padding: 15px;">
-    <h3 style="border-bottom: 1px solid; margin: 0 0 8px 0; font-size: 18px; font-weight: 600;">Leetcode: #344. Reverse String</h3>
+  <div style="background-color: whitesmoke; padding: 15px;">
+    <h3 style="border-bottom: 1px solid; margin: 0 0 8px 0; font-size: 18px; font-weight: 600;">Leetcode: #167. Two Sum 2: Input Array is Sorted</h3>
     <div style="position: relative; width: 100%; padding-top: 56.25%;">
-      <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/PKCyg5zE82A?rel=0" title="Pacific Treefrog Calling" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/QRQryYx8ADw?si=teVzt78EOiD0Obq2" title="Pacific Treefrog Calling" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
-    <p style="margin: 12px 0 0 0;"><strong>Summary:</strong> The Pacific Treefrog id one of the few frog species that actually says “ribbit, ribbit!”</p>
-  </div> -->
+    <p style="margin: 12px 0 0 0;"><strong>Summary:</strong> Two Pointer approach used to solve the problem Move Zeroes on Leetcode.com by using a smart loop technique.</p>
+  </div>
 
   <!-- Video 4 -->
   <!-- <div style="background-color: whitesmoke; padding: 15px;;">
